--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         }
 
         pre.logo{
-          font-size: 12px;
+          font-size: 14px;
           margin: 30px 0;
           font-weight: 400;
+          text-shadow: 4px 4px 10px #ff00f2;
         }
 
 </style>
@@ -104,10 +105,6 @@
       |7|8|9|E|  =>  |A|S|D|F|<br/>
       |A|0|B|F|  =>  |Z|X|C|V|<br/>
     </div>
-
-    <div id="footer">
-      Copyright &copy; 2021 by JD. All Rights Reserved.
-      </div>
 
 
     <div class="rom-selector">
@@ -136,6 +133,9 @@
        ╚═════╝╚═╝  ╚═╝╚═╝╚═╝       ╚════╝</pre></h1>
             <canvas id="screen"></canvas>
             <script src="./src/index.js"></script>
+            <div id="footer">
+              Copyright &copy; 2021 by JD. All Rights Reserved.
+              </div>
         </div>
     </main>
 </body>
