--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
   <div id="top-bar">
     <div class="wrapper">
       <ul>
-        <li><a href="https://github.com/jatindidwania/Chip-8_Emulator" target="_blank">source</a></li>
+        <li><a href="https://github.com/jatindidwania/Project-chip8" target="_blank">source</a></li>
         <li><a href="About/index.html" target="_blank">docs</a></li>
-        <li><a href="About/index.html" target="_blank">tests</a></li>
         </ul>
         <h3>👾 CHIP-8 EMULATOR 👾</h3>
       </div>
@@ -119,6 +118,16 @@
             <option value="PICTURE">PICTURE</option>
             <option value="TANK">TANK</option>
             <option value="SPACE-INVADER">SPACE-INVADER</option>
+            <option value="MERLIN">MERLIN</option>
+            <option value="MASTERMIND-FOURROW">MASTERMIND-FOURROW</option>
+            <option value="AIRPLANE">AIRPLANE</option>
+            <option value="IBM-LOGO">IBM-LOGO</option>
+            <option value="LIFE">LIFE</option>
+            <option value="LUNAR-LANDER">LUNAR-LANDER</option>
+            <option value="MISSILE">MISSILE</option>
+            <option value="NIM">NIM</option>
+            <option value="RANDOM-NUMBER-TEST">RANDOM-NUMBER-TEST</option>
+            <option value="PADDLES">PADDLES</option>
 
         </select>
     </div>
@@ -134,7 +143,7 @@
             <canvas id="screen"></canvas>
             <script src="./src/index.js"></script>
             <div id="footer">
-              Copyright &copy; 2021 by JD. All Rights Reserved.
+              Made with ❤ and coffee.
               </div>
         </div>
     </main>
