--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
            float: right;
            list-style: none;
            margin-top: 26px;
+           text-shadow: 5px 5px 10px #ff00f2;
        }
 
        #top-bar ul li {
@@ -47,7 +48,7 @@
 
 
        #info {
-            width: 80%;
+            width: 50%;
             min-height: 100px;
             border: 1px solid #be2edd;
             box-shadow: lightsalmon 0 0 6px 0;
@@ -55,7 +56,7 @@
             background-color: #3f3f3f;
             margin: 0 auto;
             padding: 10px;
-            text-align: left;
+            text-align: center;
             font-family: 'Press Start 2P', monospace;
             color: #33ff66;
             clear: both;
@@ -93,12 +94,12 @@
         <li><a href="https://github.com/jatindidwania/Project-chip8" target="_blank">source</a></li>
         <li><a href="About/index.html" target="_blank">docs</a></li>
         </ul>
-        <h3>👾 CHIP-8 EMULATOR 👾</h3>
+        <h3 class="glow"> CHIP-8 EMULATOR </h3>
       </div>
     </div>
 
     <div id="info">
-      Original CHIP-8 keyboard layout is mapped to PC keyboard as follows:<br/><br/>
+      CHIP-8 &nbsp &nbsp &nbsp &nbsp PC <br/><br/>
       |1|2|3|C|  =>  |1|2|3|4|<br/>
       |4|5|6|D|  =>  |Q|W|E|R|<br/>
       |7|8|9|E|  =>  |A|S|D|F|<br/>
